# python-template

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  COPYING  DESIGN.md  Makefile  README.md  context.py  cookiecutter.json  copier.yml  pyproject.toml
data/: ignores.j2
hooks/: git_init_project  post_gen_project  post_gen_project.j2  pre_gen_project
src/jb_python_project_skeleton/: __init__.py
template/: .dockerignore  .dockerignore.j2  .flake8  .gitignore  .gitignore.j2  .pre-commit-config.yaml  CHANGELOG.md.j2  Dockerfile.j2  Makefile.j2  README.md.j2  pyproject.toml.j2  release.Dockerfile.j2
template/docs/: Makefile
template/docs/source/: architecture.md.j2  conf.py.j2  docstring_parser.py  index.md.j2  index.rst.j2
template/src/{% include pathjoin('vars', 'package_name.j2') %}/: __init__.py.j2  cli.py.j2
template/src/{{package_name}}/: cli.py.j2
template/tests/: __init__.py.j2  test_{% include pathjoin('vars', 'package_name.j2') %}.py.j2  test_{{package_name}}.py.j2
tests/: __init__.py  docker.py  templating.py  test_template.py
vars/: package_name.j2
{{cookiecutter.project_slug}}/: .cruft.json  .dockerignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.release  Makefile  README.md  pyproject.toml  release.Dockerfile
{{cookiecutter.project_slug}}/docs/source/: architecture.md  conf.py  index.rst  readme.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  api.py  cli.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
