[tool.poetry]
name = "jb_python_project_skeleton"
version = "0.1.0"
description = "A project skeleton for Python projects, using Cookiecutter lib"
authors = ["Jb Doyon <jb@jiby.tech>"]
# Known poetry issue causes the project_slug folder to not be included
# properly in wheel. See https://github.com/python-poetry/poetry/issues/2685
include = ["template/*", "copier.yaml"]

[tool.poetry.dependencies]
python = "^3.8"
# Templating lib
copier = "*"


[tool.poetry.dev-dependencies]
pytest = "7.*"
# Manage test cases for complex parameterized fixtures (such as templates)
pytest-cases = "3.*"
# Parralellize the pytest builds
pytest-parallel = "^0.1.1"
# Run containers as part of tests (simulate other python versions)
docker = "6.*"
# Formatters, not using pre-commit due to the recursive stuff in template folder
black = "22.*"
isort = "5.*"
# Generate fake microservice names for validating the template expansion
faker-microservice = "2.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Make isort work with Black
# Avoids conflicting imports
# As per https://pycqa.github.io/isort/docs/configuration/black_compatibility/#using-a-config-file-such-as-isortcfg
[tool.isort]
profile = "black"
multi_line_output = 3

# Set pytest to record stdout/stderr to junit test result xml
[tool.pytest.ini_options]
junit_logging = "all"
addopts = """-vvvv \
    --color=yes \
    --junit-xml=test_results/results.xml"""
