[tool.poetry]
name = "jb_python_project_skeleton"
version = "2.0.0a1"
description = "A project skeleton for Python projects, using Copier lib"
authors = ["Jb Doyon <jb@jiby.tech>"]
# Known poetry issue causes the project_slug folder to not be included
# properly in wheel. See https://github.com/python-poetry/poetry/issues/2685
include = ["template", "copier.yaml", "hooks", "data", "CHANGELOG.md"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Templating lib
copier = ">=9.4.1"

[tool.poetry.dev-dependencies]
pytest = "*"
# Manage test cases for complex parameterized fixtures (such as templates)
pytest-cases = "*"
# Parralellize the pytest builds
pytest-xdist = { version = "*", extras = ["psutil"] }
# Run containers as part of tests (simulate other python versions)
testcontainers = "*"
# Generate fake microservice names for validating the template expansion
faker-microservice = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Make isort work with Black
# Avoids conflicting imports
# As per https://pycqa.github.io/isort/docs/configuration/black_compatibility/#using-a-config-file-such-as-isortcfg
[tool.isort]
profile = "black"
multi_line_output = 3

# Set pytest to record stdout/stderr to junit test result xml
[tool.pytest.ini_options]
junit_logging = "all"
addopts = """-vvvv \
    --color=yes \
    --junit-xml=test_results/results.xml"""
